erDiagram
    USERS ||--o{ HIRING_REQUESTS_AS_HIRER : creates
    USERS ||--o{ HIRING_REQUESTS_AS_WORKER : receives
    USERS ||--o{ MESSAGES_AS_SENDER : sends
    USERS ||--o{ MESSAGES_AS_RECEIVER : receives
    USERS ||--o{ REVIEWS : receives
    HIRING_REQUESTS ||--o| REVIEWS : has
    
    USERS {
        int id PK
        string name
        string email UK
        string password
        string phone
        string role
        string location
        int experience
        text skills
        float hourly_rate
        boolean is_available
        float rating
        int total_jobs
        datetime created_at
    }
    
    HIRING_REQUESTS {
        int id PK
        int hirer_id FK
        int worker_id FK
        string job_title
        text job_description
        string job_location
        float estimated_hours
        float offered_rate
        string status
        datetime created_at
    }
    
    MESSAGES {
        int id PK
        int sender_id FK
        int receiver_id FK
        text message
        datetime timestamp
        boolean is_read
    }
    
    REVIEWS {
        int id PK
        int hiring_request_id FK
        int worker_id FK
        int hirer_id FK
        float rating
        text comment
        datetime created_at
    }
